feat: add NumbersFragment layout

--- a/Numbers/app/src/main/res/values/dimens.xml
+++ b/Numbers/app/src/main/res/values/dimens.xml
@@ -6,4 +6,22 @@
     <!-- Fab -->
     <dimen name="fab_margin">16dp</dimen>
 
+    <!-- NumbersFragment -->
+    <dimen name="card_view_margin">16dp</dimen>
+    <dimen name="card_view_corner_radius">2dp</dimen>
+    <dimen name="card_view_elevation">2dp</dimen>
+    <dimen name="linear_layout_margin">16dp</dimen>
+    <dimen name="input_layout_margin_top">16dp</dimen>
+    <dimen name="edit_text_margin_end">36dp</dimen>
+    <dimen name="edit_text_margin_start">36dp</dimen>
+    <dimen name="spinner_margin_bottom">8dp</dimen>
+    <dimen name="spinner_margin_end">36dp</dimen>
+    <dimen name="spinner_margin_start">36dp</dimen>
+    <dimen name="spinner_margin_top">16dp</dimen>
+    <dimen name="spinner_divider_height">1dp</dimen>
+    <dimen name="spinner_divider_margin_top">6dp</dimen>
+    <dimen name="button_margin_top">16dp</dimen>
+    <dimen name="description_margin_top">36dp</dimen>
+    <dimen name="description_margin_bottom">36dp</dimen>
+
 </resources>
