feat: change button style

--- a/Numbers/app/src/main/res/layout/fragment_numbers.xml
+++ b/Numbers/app/src/main/res/layout/fragment_numbers.xml
@@ -73,7 +73,7 @@
                 android:layout_marginTop="@dimen/button_margin_top"
                 android:background="@drawable/submit_button_circle_borded"
                 android:text="@string/button_text"
-                android:textColor="@android:color/white"/>
+                android:textColor="@color/colorAccent"/>
 
             <TextView
                 android:id="@+id/number_description"
