--- a/Numbers/app/src/main/res/drawable/submit_button_circle_borded.xml
+++ b/Numbers/app/src/main/res/drawable/submit_button_circle_borded.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
-            <stroke android:color="@color/colorPrimary" android:width="2dp" />
+            <solid android:color="@android:color/white"/>
+            <stroke android:color="@color/colorAccent" android:width="2dp" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="2dp" />
         </shape>
