--- a/Numbers/app/src/main/res/layout/fragment_numbers.xml
+++ b/Numbers/app/src/main/res/layout/fragment_numbers.xml
@@ -7,87 +7,94 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/numbers_card_view"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/card_view_margin"
-        card_view:cardBackgroundColor="@android:color/white"
-        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
-        card_view:cardElevation="@dimen/card_view_elevation"
-        card_view:cardUseCompatPadding="true">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/numbers_card_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/linear_layout_margin"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/card_view_margin"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            card_view:cardBackgroundColor="@android:color/white"
+            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
+            card_view:cardElevation="@dimen/card_view_elevation"
+            card_view:cardUseCompatPadding="true">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/numbers_input_layout"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/input_layout_margin_top">
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/linear_layout_margin"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/number_value"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/numbers_input_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/edit_text_margin_end"
-                    android:layout_marginStart="@dimen/edit_text_margin_start"
-                    android:hint="@string/edit_text_hint"
-                    android:inputType="text"/>
+                    android:layout_marginTop="@dimen/input_layout_margin_top">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/number_value"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/edit_text_margin_end"
+                        android:layout_marginStart="@dimen/edit_text_margin_start"
+                        android:hint="@string/edit_text_hint"
+                        android:inputType="text"/>
 
-            <TextView
-                android:id="@+id/spinner_query_type_hint"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spinner_margin_bottom"
-                android:layout_marginEnd="@dimen/spinner_margin_end"
-                android:layout_marginStart="@dimen/spinner_margin_start"
-                android:layout_marginTop="@dimen/spinner_margin_top"
-                android:text="@string/spinner_hint"/>
+                </android.support.design.widget.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/query_type_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/spinner_margin_end"
-                android:layout_marginStart="@dimen/spinner_margin_start"/>
+                <TextView
+                    android:id="@+id/spinner_query_type_hint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spinner_margin_bottom"
+                    android:layout_marginEnd="@dimen/spinner_margin_end"
+                    android:layout_marginStart="@dimen/spinner_margin_start"
+                    android:layout_marginTop="@dimen/spinner_margin_top"
+                    android:text="@string/spinner_hint"/>
 
-            <View
-                android:id="@+id/spinner_query_type_divider"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spinner_divider_height"
-                android:layout_marginEnd="@dimen/spinner_margin_end"
-                android:layout_marginStart="@dimen/spinner_margin_start"
-                android:layout_marginTop="@dimen/spinner_divider_margin_top"
-                android:background="@android:color/black"/>
+                <Spinner
+                    android:id="@+id/query_type_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/spinner_margin_end"
+                    android:layout_marginStart="@dimen/spinner_margin_start"/>
 
-            <Button
-                android:id="@+id/submit_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:background="@drawable/submit_button_circle_borded"
-                android:text="@string/button_text"
-                android:textColor="@color/colorAccent"/>
+                <View
+                    android:id="@+id/spinner_query_type_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/spinner_divider_height"
+                    android:layout_marginEnd="@dimen/spinner_margin_end"
+                    android:layout_marginStart="@dimen/spinner_margin_start"
+                    android:layout_marginTop="@dimen/spinner_divider_margin_top"
+                    android:background="@android:color/black"/>
 
-            <TextView
-                android:id="@+id/number_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/description_margin_bottom"
-                android:layout_marginTop="@dimen/description_margin_top"
-                android:gravity="center"
-                android:text="@string/empty_description_text"/>
+                <Button
+                    android:id="@+id/submit_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:background="@drawable/submit_button_circle_borded"
+                    android:text="@string/button_text"
+                    android:textColor="@color/colorAccent"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/number_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/description_margin_bottom"
+                    android:layout_marginTop="@dimen/description_margin_top"
+                    android:gravity="center"
+                    android:text="@string/empty_description_text"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -96,4 +103,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout
+    >
