--- a/Numbers/app/src/main/res/values/dimens.xml
+++ b/Numbers/app/src/main/res/values/dimens.xml
@@ -24,4 +24,9 @@
     <dimen name="description_margin_top">36dp</dimen>
     <dimen name="description_margin_bottom">36dp</dimen>
 
+    <!-- SavedOrHistoryFragment -->
+    <dimen name="recycler_view_vertical_margin">16dp</dimen>
+    <dimen name="recycler_view_horizontal_margin">16dp</dimen>
+    <dimen name="empty_view_padding_top">100dp</dimen>
+
 </resources>
