--- a/Numbers/app/src/main/res/menu/saved_or_history_fragment.xml
+++ b/Numbers/app/src/main/res/menu/saved_or_history_fragment.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/delete_quote"
+        android:id="@+id/delete_number"
         android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/title_delete_all_number"
         app:showAsAction="ifRoom"/>
